# eccc-hudson-bay-lowlands

./: .env.example  .gitignore  LICENSE  README.md  biome.json  client-coverage.json  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  tsconfig.json
api/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  config.py  exception_handlers.py  logging_config.py  main.py  pyproject.toml  seed.py
api/data/: HJBL_footprint.geojson  polygon_4326.geojson
api/db/: __init__.py  base.py  database.py
api/models/: __init__.py  category.py  dataset.py  layer.py  location.py  raster.py  shared_analysis.py
api/routers/: analysis.py  categories.py  cog.py  datasets.py  geometry.py  hbl_area.py  health.py  layers.py  locations.py  rasters.py  seed.py
api/schemas/: __init__.py  analysis.py  category.py  dataset.py  geometry.py  hbl_area.py  i18n.py  layer.py  location.py  raster.py  shared_analysis.py
api/services/: analysis.py  cleanup.py  geometry.py  seed.py  shared_analysis.py  widgets.py  zonal_stats.py
api/tests/: conftest.py  test_analysis.py  test_categories.py  test_cog.py  test_cog_integration.py  test_datasets.py  test_geometry.py  test_hbl_area.py  test_health.py  test_layers.py  test_locations.py  test_rasters.py  test_seed.py  test_shared_analysis.py
api/tests/fixtures/: hbl_shape_test.geojson
data-processing/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data-processing/notebooks/: 00_download_data.ipynb  00_get_footprint.ipynb  01_download_data.ipynb  01_get_footprint.ipynb  02_preprocess_data.ipynb  03_process_vectors.ipynb  04_zonal_statistics.ipynb
data-processing/src/data_processing/: __init__.py  download.py  (+4 more)
(+262 files in other folders)
